# teg

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.local.yaml.example  settings.yaml
data/: idp_teg_data_index.json
docs/: TDD.md  TDD_add_end_to_end_flow_instructions.md  TDD_add_llm_flow_instructions.md  TDD_add_overview_instructions.md  TDD_diagrams_only_instructions.md  TDD_v10_change_instructions.md  TDD_v11_change_instructions.md  TDD_v12_change_instructions.md  TDD_v13_change_instructions.md  TDD_v14_final_change_instructions.md  business_needs_eda.html  business_needs_eda.md  description_eda.html  description_eda.md  end_to_end_flow.html  end_to_end_flow.md  generation_flow.html  generation_flow.md  generation_flow_merged.html  generation_flow_merged.md  ingestion_tdd.md  l3_capability_eda.html  l3_capability_eda.md  latency_cost_eda.html  latency_cost_eda.md  llm_invocation_flow.html  llm_invocation_flow.md  prompt_io_examples.html  prompt_io_examples.md  retrieval_eval_findings.html  retrieval_eval_findings.md  retrieval_report.docx  retrieval_representation_eda.md  service_contracts.md  stage_selection_eda.html  stage_selection_eda.md  token_analysis_findings.html  token_analysis_findings.md  token_budget_optimization.md  value_stream_candidate_merger.md  (+6 more)
idea_cards/: README.md
notebooks/: attachments_eda.ipynb
scripts/: _judge_throttle.py  analyze_vs_drops.py  build_cost_charts.py  build_description_charts.py  build_l3_charts.py  build_needs_charts.py  build_repr_report.py  build_retrieval_report.py  build_stage_charts.py  build_stage_ground_truth.py  build_token_budget_report.py  build_token_report.py  build_vs_report.py  build_vs_repr_charts.py  check_idp_auth.py  clean_local_docs.py  compare_eval.py  compare_idea_cards.py  cosmos_ingest.py  cost_estimate.py  create_index.py  diagnose_stage_coverage.py  eda_attachments.py  eval_business_needs.py  eval_description.py  eval_l3.py  eval_stages.py  eval_vs.py  extract_signals.py  extract_theme_vs.py  fig_common.py  generate_idmt_docs.py  generate_vs_catalogue.py  gt_distribution.py  ingest_tickets.py  inspect_eval.py  inspect_jira_fields.py  jira_eda.py  list_jira_fields.py  localize_cosmos_schema.py  (+27 more)
tests/: __init__.py  test_azure_search_client.py  test_bootstrap.py  test_business_needs_judges.py  test_condense.py  test_contracts.py  test_cosmos_client.py  test_custom_instruction.py  test_description_judges.py  test_drop_analysis.py  test_drop_probes.py  test_embeddings_client.py  test_embeddings_protocol.py  test_eval_stages.py  test_eval_vs.py  test_historical_index_documents.py  test_idmt_documents.py  test_idp_auth.py  test_idp_llm_client.py  test_index_schema_conformance.py  test_jira_source.py  (+22 more)
(+98 files in other folders)
