[project]
name = "teg"
version = "0.1.0"
description = "Theme & Epic Generation - ingestion + data science solution"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Runtime attachment extraction (install for production: uv sync --extra extract)
extract = [
    "pypdfium2>=4.0",
    "python-pptx>=0.6",
    "python-docx>=1.0",
]
# Exploratory data analysis notebooks (uv sync --extra eda --extra extract)
eda = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tiktoken>=0.5",
    "ipykernel>=6.0",
]
# Azure AI Search (install for live retrieval: uv sync --extra search)
search = [
    "azure-search-documents>=11.4",
    "azure-core>=1.30",
    "azure-identity>=1.16",
    "aiohttp>=3.9",  # async transport for the aio search + identity clients
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
